force-app/main/default/objects/copadoconnect__Field_Value_Mapping__c/copadoconnect__Field_Value_Mapping__c.object-meta.xml
<CustomObject>
    <label>Field Value Mapping</label>
    <nameField>
        <displayFormat>FVM-{0000}</displayFormat>
        <label>Field Value Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Value Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>