force-app/main/default/objects/copadoconnect__Field_Value_Mapping__c/fields/copadoconnect__Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Field_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Mapping</label>
    <referenceTo>copadoconnect__FieldMapping__c</referenceTo>
    <relationshipLabel>Field Value Mappings</relationshipLabel>
    <relationshipName>Field_Value_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>