force-app/main/default/objects/copadoconnect__Field_Value_Mapping__c/fields/copadoconnect__Salesforce_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Salesforce_Field_Value__c</fullName>
    <label>Salesforce Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>